--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,12 @@ dependencies {
     compile ("io.github.swagger2markup:swagger2markup:2.0.0-SNAPSHOT")
     compile 'io.airlift:airline:0.7'
     compile 'ch.qos.logback:logback-classic:1.1.2'
-    testCompile 'org.assertj:assertj-core:3.4.0'
-    testCompile 'junit:junit:4.11'
-    testCompile "org.mockito:mockito-core:1.9.5"
+    compile 'org.assertj:assertj-core:3.4.0'
+    compile 'junit:junit:4.11'
+    compile "org.mockito:mockito-core:1.9.5"
+    compile 'org.apache.commons:commons-configuration2:2.7'
+    compile group: 'io.swagger', name: 'swagger-models', version: '1.5.3'
+    
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -59,11 +62,11 @@ artifacts {
     archives javadocJar
 }
 
-task wrapper(type: Wrapper) {
+wrapper{
     gradleVersion = '5.6.3'
 }
 
-task runJar(dependsOn:jar) << {
+task runJar(dependsOn:jar) doLast {
     String swaggerInput = file("src/test/resources/swagger_petstore.yaml").getAbsolutePath()
     javaexec { main="-jar"; args = [jar.archivePath, 'convert', '-i', "${swaggerInput}", '-d', "${buildDir}"]}
 }
